--- a/lipin_spring_ioc_anno/pom.xml
+++ b/lipin_spring_ioc_anno/pom.xml
@@ -9,10 +9,29 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+        <!--    Spring 框架-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>5.2.7.RELEASE</version>
+        </dependency>
+<!--        mysql-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.20</version>
+        </dependency>
+<!--       c3p0-->
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.5</version>
+        </dependency>
+<!--        druid-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.22</version>
         </dependency>
         <!--        單元測試-->
         <dependency>
@@ -23,4 +42,19 @@
         </dependency>
     </dependencies>
 
+<!--    jdk1.8-->
+   <build>
+       <plugins>
+           <plugin>
+                   <groupId>org.apache.maven.plugins</groupId>
+                   <artifactId>maven-compiler-plugin</artifactId>
+                   <version>3.8.0</version>
+                   <configuration>
+                     <target>1.8</target>
+                     <source>1.8</source>
+                     <encoding>UTF-8</encoding>
+                   </configuration>
+                 </plugin>
+       </plugins>
+   </build>
 </project>
